--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,9 +51,18 @@
 		<true/>
 		<key>CFBundleLocalizations</key>
 		<array>
+			<string>ar</string>
+			<string>de</string>
 			<string>en</string>
-			<string>de_DE</string>
-			...
+			<string>es</string>
+			<string>fr</string>
+			<string>hi</string>
+			<string>it</string>
+			<string>ja</string>
+			<string>ko</string>
+			<string>pt</string>
+			<string>ru</string>
+			<string>zh</string>
 		</array>
 		<!-- Add Google Maps API Key -->
 		<key>GoogleMapsApiKey</key>
